<resources>
    <string name="app_name">HDDinfo</string>
    <string name="russian">russian</string>
    <string name="english">english</string>
    <string name="pricehigh">price(high to low)</string>
    <string name="model">"Model: "</string>
    <string name="searchbymodel">search by model</string>
    <string name="filter">filter</string>
    <string name="capacity">Capacity:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="welcome">Welcome to the \'Hard Drives\' information and reference system.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberme">remember me</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="confirmpas">Confirm password</string>
    <string name="reg">Registration</string>
    <string name="manufacturername">Manufacturer Name</string>
    <string name="selectfilter">Select filter</string>
    <string name="pricelow">Price(low to high)</string>
    <string name="capacitylow">Capacity(low to high)</string>
    <string name="capacityhigh">Capacity(high to low)</string>
    <string name="alphabet">Alphabetical</string>
    <string name="logout">Are you sure you want to log out of your account?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="chooseln">Choose language</string>
    <string name="ruselected">Russian language is selected</string>
    <string name="enselected">English language is selected</string>
    <string name="chooseth">Choose a theme</string>
    <string name="redl">Red(light)</string>
    <string name="redd">Red(dark)</string>
    <string name="brownl">Brown(light)</string>
    <string name="brownd">Brown(Dark)</string>
    <string name="fill">Fill in all the fields</string>
    <string name="loginerror">Login error</string>
    <string name="entere">Enter Email!</string>
    <string name="enterp">Enter Password!</string>
    <string name="missm">Password mismatch!</string>
    <string name="minimum">The minimum number of characters in a password is 6</string>
    <string name="regerror">Registration error. Try again</string>
    <string name="errorload">Error loading data</string>
    <string name="selectm">Select manufacturer</string>
    <string name="errorgettingm">Error getting manufacturers</string>
    <string name="hddadd">Hard drive added</string>
    <string name="erroradd">Error when adding a hard drive</string>
    <string name="selecthdd">Select the hard drive to delete</string>
    <string name="errorrec">Error when receiving hard drives</string>
    <string name="hdddel">Hard drive deleted</string>
    <string name="errorhdddel">Error when removing hard drive</string>
    <string name="addm">Add manufacturer</string>
    <string name="enterm">Enter manufacturer name</string>
    <string name="addedm">Manufacturer added</string>
    <string name="erroraddedm">Error when adding manufacturer</string>
    <string name="selmrem">Select manufacturer for remove</string>
    <string name="mrem">Manufacturer removed</string>
    <string name="errormrem">Error when removing manufacturer</string>
    <string name="add">Add</string>
    <string name="errorgetm">Error getting manufacturers</string>
    <string name="descru">Description in russian</string>
    <string name="descen">Description in english</string>
    <string name="addhdd">Add a hard drive</string>
    <string name="deletehdd">Delete a hard drive</string>
    <string name="deletem">Remove manufacturer</string>
    <string name="mains">Main screen</string>
    <string name="man">Manufacturers</string>
    <string name="Logoutha">Logout</string>
    <string name="lan">Language</string>
    <string name="Theme">Theme</string>
    <string name="choose_option">Choose option</string>
    <string name="admin">admin</string>
</resources>